Fixing navbar gaps

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ body.dark-mode{
 .nav-container {
   max-width: 1100px;
   margin: auto;
+  gap: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -273,13 +274,15 @@ body.dark-mode{
 }
 
 .social-icons {
-  display: inline-block;
+  display: block;
   width: 75px;
   height: 75px;
   border-radius: 50%;
   /*border: 4px solid #ffffff;*/
   color: #111;
   background-color: #ffffff;
+  text-decoration: none;
+  margin: 0 auto;
 }
 
 .social-icons:hover {
